# fibro

./: .gitmodules  README.md  hatch_build.py  pyproject.toml
.helix/: ignore
filebrowser/: __main__.py  app.py  app.tcss  browser.py  config.py  directory.py  highlight.py  preview.py  prompt.py  queries  simple_input.py  utils.py
