[project]
name = "filebrowser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
packages = ["filebrowser"]
dependencies = [
    "textual[syntax]>=1.0.0",
]

[project.scripts]
fb = "filebrowser.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.8.6",
    "textual-dev>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
packages = ["filebrowser"]

[tool.hatch.build]
exclude = [
    "/filebrowser/helix",
    "!/filebrowser/helix/LICENSE",
    "!/filebrowser/helix/theme.toml",
    "!/filebrowser/helix/base16_theme.toml",
    "!/filebrowser/helix/runtime/queries",
    "!/filebrowser/helix/runtime/themes",
]
